--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1,3 +1,5 @@
-bin_PROGRAMS = btc_wallet_tests
+check_PROGRAMS = btc_wallet_tests
+btc_wallet_tests_CPPFLAGS = -I../src/ ${BOOST_CPPFLAGS}
+btc_wallet_tests_LDFLAGS = ${BOOST_LDFLAGS}
+btc_wallet_tests_LDADD = ${BOOST_UNIT_TEST_FRAMEWORK_LIB}
 btc_wallet_tests_SOURCES = runner.cpp main_tests.cpp
-btc_wallet_tests_CPPFLAGS = -I../src/
