--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1,5 +1,5 @@
-check_PROGRAMS = btc_wallet_tests
-btc_wallet_tests_CPPFLAGS = -I../src/ ${BOOST_CPPFLAGS}
-btc_wallet_tests_LDFLAGS = ${BOOST_LDFLAGS}
-btc_wallet_tests_LDADD = ${BOOST_UNIT_TEST_FRAMEWORK_LIB}
-btc_wallet_tests_SOURCES = runner.cpp main_tests.cpp
+check_PROGRAMS = projenpp_tests
+projenpp_tests_CPPFLAGS = -I../src/ ${BOOST_CPPFLAGS}
+projenpp_tests_LDFLAGS = ${BOOST_LDFLAGS}
+projenpp_tests_LDADD = ${BOOST_UNIT_TEST_FRAMEWORK_LIB}
+projenpp_tests_SOURCES = ../src/testfuncs.cpp runner.cpp projenpp_tests.cpp
