--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,2 +1,4 @@
 bin_PROGRAMS = projenpp
 projenpp_SOURCES = main.cpp testfuncs.cpp
+projenpp_CPPFLAGS = ${projenpp_BUILD_CPPFLAGS}
+projenpp_LDADD = ${projenpp_LIBS} ${BOOST_SYSTEM_LIBS} ${BOOST_PROGRAM_OPTIONS_LIBS}
