--- a/configure.ac
+++ b/configure.ac
@@ -13,16 +13,28 @@ AC_CONFIG_MACRO_DIR([m4])
 # Checks for programs.
 AC_PROG_CXX
 
+# Check for baseline language coverage in the compiler for the C++11 standard.
+#------------------------------------------------------------------------------
+AX_CXX_COMPILE_STDCXX_11([noext], [mandatory])
+
 # Require c++11 for all c++ products.
 #------------------------------------------------------------------------------
 AS_CASE([${CC}], [*],
     [AX_CHECK_COMPILE_FLAG([-std=c++11],
 [CXXFLAGS="$CXXFLAGS -std=c++11"])])
 
-# Checks for libraries.
+# Check for pkg-config.
+PKG_PROG_PKG_CONFIG
+AS_IF([test -n "$PKG_CONFIG"], [],
+    [AC_MSG_ERROR([pkg-config is required but was not found.])])
+
+# Boost
+# ---------------------
 AX_BOOST_BASE([1.47.0])
-AX_BOOST_UNIT_TEST_FRAMEWORK
+
+AX_BOOST_SYSTEM
 AX_BOOST_PROGRAM_OPTIONS
+AX_BOOST_UNIT_TEST_FRAMEWORK
 
 # Checks for header files.
 
