--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,4 +1,3 @@
 bin_PROGRAMS = projenpp
 projenpp_SOURCES = main.cpp testfuncs.cpp
-projenpp_CPPFLAGS = ${projenpp_BUILD_CPPFLAGS}
-projenpp_LDADD = ${projenpp_LIBS} ${BOOST_SYSTEM_LIBS} ${BOOST_PROGRAM_OPTIONS_LIBS}
+projenpp_LDADD = -lboost_program_options
