--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,3 +1,3 @@
 bin_PROGRAMS = projenpp
-projenpp_SOURCES = main.cpp testfuncs.cpp
-projenpp_LDADD = -lboost_program_options
+projenpp_SOURCES = main.cpp projenpp.cpp
+projenpp_LDADD = -lboost_program_options -lboost_filesystem -lboost_system
