--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,21 @@
-aclocal.m4
-autom4te.cache
 autoscan.log
-config.h.in
-configure
-depcomp
 Makefile.in
-missing
-install-sh
-config.guess
-config.status
-test-driver
-config.sub
-compile
-config.h
-config.log
-stamp-h1
 test-suite.log
 Makefile
 *.o
 *.swp
 *.Po
 projenpp
+projen++
 *.in*
 *.orig
+depcomp
+missing
+test-driver
+config.*
+configure
+compile
+autom4te.cache
+stamp-h1
+aclocal.m4
+install-sh
